[package]
name = "gallary-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-schema = "54.2.1"
arrow= "54.2.1"
async-walkdir = "2.1.0"
chrono = "0.4.39"
deltalake = { version = "0.25.0", features = ["datafusion"] }
function_name = "0.3.0"
futures-lite = "2.6.0"
anyhow = "1.0.98"
async-trait = "0.1.88"
#duckdb = { version = "1.2.2", features = ["bundled"] }

[dependencies.rusqlite]
version = "0.35.0"
features = ["bundled"]


[dependencies.tokio]
version = "1.44.2"
features = [
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "fs",
    "parking_lot",
] 

[dev-dependencies]
rstest = "0.25.0"
random-string = "1.1.0"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold"]
