[package]
name = "gallary-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-schema = "54.2.1"
arrow= "54.2.1"
chrono = "0.4.39"
deltalake = { version = "0.25.0", features = ["datafusion"] }
anyhow = "1.0.98"
polars-lazy = { version = "0.46.0", features = ["parquet"] }
polars = "0.46.0"
walkdir = "2.5.0"
rocket = "0.5.1"
#duckdb = { version = "1.2.2", features = ["bundled"] }

[dependencies.rusqlite]
version = "0.35.0"
features = ["bundled"]


[dependencies.tokio]
version = "1.44.2"
features = [
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "fs",
    "parking_lot",
] 

[dev-dependencies]
rstest = "0.25.0"
random-string = "1.1.0"
rand = "0.9.1"
counter = "0.6.0"

function_name = "0.3.0"
